[package]
name = "webview-holder"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darwin-webkit = "0.1.3"
serde = { version = "1.0.126", features = ["derive"] }
log = "0.4.11"
serde_json = "1.0.64"
cocoa = "0.18.4"
objc = "0.2.7"
