[package]
name = "webview-transport"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
futures-util = "0.3.15"
tokio-tungstenite = "0.14.0"
serde_json = "1.0.64"
crossbeam = "0.8.0"
log = "0.4.11"
tungstenite = "0.13.0"
async-trait = "0.1.50"
serde = { version = "1.0.126", features = ["derive"] }

webview-holder = { path = "../webview-holder" }