cargo-features = ["edition2021"]

[package]
name = "daw_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
actix = "^0.12.0"
flutter_rust_bridge = "^1.6.0"
anyhow = "1.0.45"
log = "^0.4.14"
uuid = { version = "1.0.0-alpha.1", features = ["v4"] }
flexbuffers = "2.0.0"

serde = "^1.0.130"
serde_json = "^1.0.71"

audio-garbage-collector = { path = "../../augmented/audio/audio-garbage-collector" }
plugin-host-lib = { path = "../plugin-host/plugin-host-lib" }
wisual-logger = { path = "../../augmented/ops/wisual-logger" }

[build-dependencies]
cbindgen = "^0.20.0"
flutter_rust_bridge_codegen = "^1.6.0"
