[package]
name = "daw_ui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
actix = "^0.13.0"
flutter_rust_bridge = "^1.62.0"
anyhow = "1.0.52"
log = "^0.4.14"
uuid = { version = "1.0", features = ["v4"] }
flexbuffers = "2.0.0"

serde = "^1.0.130"
serde_json = "^1.0.71"

audio-garbage-collector = { path = "../../augmented/audio/audio-garbage-collector" , version = "1.1.1" }
audio-processor-traits = { path = "../../augmented/audio/audio-processor-traits" , version = "3.2.0" }
audio-processor-time = { path = "../../augmented/audio/audio-processor-time" , version = "1.0.0" }
augmented-dsp-filters = { path = "../../augmented/dsp/dsp-filters" , version = "2.0.0" }
audio-processor-utility = { path = "../../augmented/audio/audio-processor-utility" , version = "1.0.0" }
audio-processor-graph = { path = "../../augmented/audio/audio-processor-graph" , version = "1.0.0" }
plugin-host-lib = { path = "../plugin-host/plugin-host-lib" }
wisual-logger = { version = "0.1", path = "../../augmented/ops/wisual-logger" }

[build-dependencies]
cbindgen = "0.24.3"
flutter_rust_bridge_codegen = "^1.62.0"
