[package]
name = "demo_plugin"
version = "0.0.1"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/yamadapc/augmented-audio"
repository = "https://github.com/yamadapc/augmented-audio"

[dependencies]
augmented = { path = "../../augmented/augmented" }
log = "^0.4.11"

[lib]
name = "demo_plugin"
crate-type = ["cdylib"]

[package.metadata]
augmented.private = true
app.public-name = "DemoPlugin"
app.macos.type = "vst"
app.macos.identifier = "com.beijaflor.demoplugin"
bundle.name = "DemoPlugin"
bundle.macos.properties.CFBundleGetInfoString = "vst"
